# safex-nodejs-libwallet

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  binding.gyp  index.d.ts  install.sh  mac_fix.patch  package-lock.json  package.json  win_delay_load_hook.cc
example/: index.js  package-lock.json  package.json  test-create-advanced-tx.js  test-create-tx.js  test-msig.js  test-wallet.address.txt
include/: windows_wrapper.h
libnode/: node.def
src/: WinWallet.cpp  WinWallet.h  addon.cc  pendingtransaction.cc  pendingtransaction.h  safexnativewallet.h  wallet.cc  wallet.h  walletargs.cc  walletargs.h  walletcallbacks.cc  wallettasks.cc  wallettasks.h
src/win/: misc.cpp  winpendingtransaction.cpp  winpendingtransaction.h  wintransactioninfo.cpp  wintransactioninfo.h  winwallet.cpp  winwallet.h  winwalletlistener.cpp  winwalletlistener.h  winwalletmanager.cpp  winwalletmanager.h
test/: index.js
